--- a/SmartH2O_Service/Web.config
+++ b/SmartH2O_Service/Web.config
@@ -30,6 +30,16 @@
     </modules>
   </system.webServer>
   <system.serviceModel>
+    <bindings>
+      <basicHttpBinding>
+        <binding name="BasicHttpBinding_IServiceLog" />
+      </basicHttpBinding>
+    </bindings>
+    <client>
+      <endpoint address="http://localhost:29976/ServiceLog.svc" binding="basicHttpBinding"
+        bindingConfiguration="BasicHttpBinding_IServiceLog" contract="ServiceReference1.IServiceLog"
+        name="BasicHttpBinding_IServiceLog" />
+    </client>
     <behaviors>
       <serviceBehaviors>
         <behavior name="">
