--- a/SmartH2O_Service/SmartH2O_Service.csproj
+++ b/SmartH2O_Service/SmartH2O_Service.csproj
@@ -103,12 +103,12 @@
     <Content Include="ApplicationInsights.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <None Include="App_Data\log-alarms.xsd">
+    <Content Include="App_Data\log-alarms.xsd">
       <SubType>Designer</SubType>
-    </None>
-    <None Include="App_Data\log-sensors.xsd">
+    </Content>
+    <Content Include="App_Data\log-sensors.xsd">
       <SubType>Designer</SubType>
-    </None>
+    </Content>
     <None Include="Service References\ServiceReference1\ServiceLog.wsdl" />
     <None Include="Service References\ServiceReference1\ServiceLog.xsd">
       <SubType>Designer</SubType>
