--- a/SmartH2O_Service/Web.config
+++ b/SmartH2O_Service/Web.config
@@ -32,7 +32,16 @@
   <system.serviceModel>
     <bindings>
       <basicHttpBinding>
-        <binding name="BasicHttpBinding_IServiceLog" />
+          
+            <binding name="basicHttp" allowCookies="true"
+                     maxReceivedMessageSize="64000000"
+                     maxBufferSize="64000000"
+                     maxBufferPoolSize="64000000">
+              <readerQuotas maxDepth="32"
+                   maxArrayLength="64000000"
+                   maxStringContentLength="64000000"/>
+            </binding>
+          
       </basicHttpBinding>
     </bindings>
     <client>
